--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "yup": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
