--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.7",
+    "@mui/x-charts": "^6.19.5",
     "@mui/x-date-pickers": "^6.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -29,6 +31,7 @@
     "yup": "^1.3.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
