--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
