--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.14.7",
     "@mui/x-charts": "^6.19.5",
-    "@mui/x-date-pickers": "^6.12.0",
+    "@mui/x-date-pickers": "^7.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.4",
