--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "match-sorter": "^6.3.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.1",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.15",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
