--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.13",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/react": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
     "@mui/icons-material": "^5.14.3",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.14.7",
@@ -25,7 +30,6 @@
     "match-sorter": "^6.3.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.12.1",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
@@ -37,7 +41,6 @@
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.15",
-    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
