--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-charts": "^6.19.5",
     "@mui/x-date-pickers": "^7.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.3",
@@ -36,6 +37,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.11",
     "yup": "^1.3.0"
   },
   "devDependencies": {
