--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.7",
     "@mui/x-charts": "^6.19.5",
     "@mui/x-date-pickers": "^7.2.0",
+    "@react-pdf/renderer": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.4.0",
