--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "recharts": "^2.15.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.11",
     "yup": "^1.3.0"
